# sliver

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  shots.yml
sliver/: cli.py
tests/: shots.yml
