[project]
name = "sliver"
version = "0.0.1"
authors = [
  { name="Andy Jackson", email="anj@anjackson.net" },
]
description = "A sliver of a sliver."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "pywb",
  "cdxj-indexer",
  "wacz",
  "shot-scraper"
]

[project.urls]
Homepage = "https://github.com/anjackson/sliver"
Issues = "https://github.com/anjackson/sliver/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

